--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "blackmagic-output"
-version = "1.0.0"
+version = "0.9.0-beta"
 description = "Python library for outputting video frames to Blackmagic DeckLink devices"
 readme = "README.md"
 requires-python = ">=3.7"
