--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy>=1.19.0",
+    "numpy>=1.19.0,<2.3",
     "pybind11>=2.6.0",
 ]
 
