--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -18,3 +18,6 @@ global-exclude *.pyc
 global-exclude *.pyo
 global-exclude __pycache__
 global-exclude .DS_Store
+
+# Exclude tools directory (C++ utilities, not part of Python package)
+prune tools
