--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,15 +13,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TEMPORARY: Only testing Windows while debugging build issues
-        os: [windows-latest]
-        python-version: ['3.11']
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        # python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
-        # exclude:
-        #   # Python 3.13 may not be available on all runners yet
-        #   - os: windows-latest
-        #     python-version: '3.13'
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        exclude:
+          # Python 3.13 may not be available on all runners yet
+          - os: windows-latest
+            python-version: '3.13'
 
     steps:
       - uses: actions/checkout@v4
