--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -32,7 +32,7 @@ jobs:
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_ARCHS_LINUX: x86_64
           CIBW_ARCHS_WINDOWS: AMD64
-          CIBW_TEST_COMMAND: python -c "import blackmagic_output; print(blackmagic_output.__version__)"
+          CIBW_TEST_COMMAND: python -c "import blackmagic_io; print(blackmagic_io.__version__)"
           CIBW_TEST_SKIP: "*-macosx_arm64"
 
       - uses: actions/upload-artifact@v4
@@ -68,7 +68,7 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
     environment:
       name: pypi
-      url: https://pypi.org/project/blackmagic-output/
+      url: https://pypi.org/project/blackmagic-io/
     permissions:
       id-token: write
     steps:
